1.5 (unreleased)
----------------

- :meth:`atomx.Atomx.report` takes ``name`` parameter to name reports


1.4
---

- Change default API version to `v2`
- If :meth:`atomx.Atomx.post` returns a list, auto-convert list of objects
  to a list of :mod:`atomx.models` models. (Useful for `POST` to the `/domains` endpoint)
- Add :class:`atomx.models.ScheduledReport`
- :meth:`atomx.Atomx.report` accepts ``when`` and ``interval`` to create a
  :class:`atomx.models.ScheduledReport`


1.3
---

- Add :meth:`atomx.Atomx.delete` to send a ``HTTP DELETE`` request to the api
- :meth:`atomx.Atomx.get` and :meth:`atomx.Atomx.delete` accept non-keyword arguments
  that are used to compute the final resource path
- Add `emails` parameter to :meth:`atomx.Atomx.report`
- Model attributes that are dates get automatically converted to a python :mod:`datetime`
- When saving a model, dates, sets and decimals get automatically converted
  to there json counterpart
- Add `save_response` parameter to :class:`atomx.Atomx` to save the response meta data
  of the last api call


1.2
---

- You can now remove model attributes with `del`
- Add :meth:`atomx.models.Report.csv` property that returns the report content as a list
- Save logged in user as `user` property to :class:`atomx.Atomx`
- Add network reports
- Try to determine report scope from user access rights if no scope was specified


1.1
---

- Fix: setup.py not working under some environments (`open` used wrong codec)
- Add SellerProfile model
- Add `offset` parameter to :meth:`atomx.models.Report.get`


1.0
---

- First release