@@ -2,6 +2,12 @@
 ----------------
 
 - :meth:`atomx.Atomx.report` takes ``name`` parameter to name reports
+- Add new models:
+    - :class:`atomx.models.AccountManager` (alias for `User`)
+    - :class:`atomx.models.Banned` (alias for `Reason`)
+    - :class:`atomx.models.PlacementType`
+    - :class:`atomx.models.CampaignDebugReason`
+    - :class:`atomx.models.Visibility`
 
 
 1.4
